--- a/app/views/reports/show_ride_purpose_report.html.erb
+++ b/app/views/reports/show_ride_purpose_report.html.erb
@@ -5,7 +5,7 @@
 <form action="/reports/ride_purpose_report" method="GET">
   <fieldset>
 
-  <p><strong>Start date:</strong> <input type="text" name="start_date" /></p>
+  <p><label for="start_date">Start date:</label> <input type="text" name="start_date" class="datepicker" /></p>
 
   <div class="actions">
     <input type="submit" name="report" value="Report" />
