--- a/app/views/runs/index.html.erb
+++ b/app/views/runs/index.html.erb
@@ -2,11 +2,19 @@
   <h1>View Runs</h1>
 </div>
 
-   <%= form_for @query, :html=>{:id=>"run-filter", :method=>:get}, :url=>{:action=>:index} do |f| %>
-     <div class="ui-widget">
-       Runs between <span id="startdate-wrap"><%= f.text_field :start_date %></span>and<span id="enddate-wrap"><%= f.text_field :end_date %></span>
-    	<input id="summary-search" type="submit" value="Search" />
-     </div>
-   <% end %>
-   
+<%= form_for @query, :html=>{:id=>"run-filter", :method=>:get}, :url=>{:action=>:index} do |f| %>
+  <fieldset>
+
+    <ol class="section first">
+      <li><%= f.label :start_date, "Start Date:" %> <%= f.text_field :start_date, :class=>"datepicker" %></li>
+      <li><%= f.label :end_date, "End Date:" %> <%= f.text_field :end_date, :class=>"datepicker" %></li>
+    </ol>
+
+    <div class="actions">
+      <input id="summary-search" type="submit" value="Search" />
+    </div>
+
+  </fieldset>
+<% end %>
+
 <%= render "runs" %>
