--- a/app/views/trips/show_bulk_update.html.erb
+++ b/app/views/trips/show_bulk_update.html.erb
@@ -3,11 +3,19 @@
 </div>
 
 <%= form_tag :action=>:bulk_update, :method=>"POST" do  %>
+  <fieldset>
 
-Mark all runs complete for periods between
-<%= date_select :update, :start_date %> and 
-<%= date_select :update, :end_date %>
-<br/>
+    <ol class="section">
+      <li>
+      Mark all runs complete for periods between
+      <%= date_select :update, :start_date %> and 
+      <%= date_select :update, :end_date %>
+      </li>
+    </ol>
 
-<%= submit_tag 'Update' %>
+    <div class="actions">
+      <%= submit_tag 'Update' %>
+    </div>
+
+  </fieldset>
 <% end %>
