--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,5 @@
 <ol class="section fourth">
   <li><%= f.label :email, "Email: " %> <%= f.text_field :email %></li>
   <li><%= f.label :level, "Level: " %> <%= f.text_field :level %> (enter 0 for an ordinary user or 100 for an updater)</li>
+  <li><p>An email will be sent to the user with their password when you click "Create".</p></li>
 </ol>
