--- a/app/views/runs/index.html.erb
+++ b/app/views/runs/index.html.erb
@@ -6,8 +6,8 @@
   <fieldset>
 
     <ol class="section first">
-      <li><%= f.label :start_date, "Start Date:" %> <%= f.text_field :start_date, :class=>"datepicker" %></li>
-      <li><%= f.label :end_date, "End Date:" %> <%= f.text_field :end_date, :class=>"datepicker" %></li>
+      <li><%= f.label :start_date, "Start Date:" %> <%= f.text_field :start_date, :class=>"datetimepicker" %></li>
+      <li><%= f.label :end_date, "End Date:" %> <%= f.text_field :end_date, :class=>"datetimepicker" %></li>
     </ol>
 
     <div class="actions">
