--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,30 +2,19 @@
 <html>
 <head>
   <title>Lowdown</title>
-  <%= stylesheet_link_tag 'style', :media=>"screen" %>
-  <%= stylesheet_link_tag 'print-reset', :media=>"print" %>
-  
-  <%= stylesheet_link_tag 'monthpicker.css' %>
-  <%= stylesheet_link_tag 'ui-custom/jquery-ui-1.8.6.custom.css' %>
-  <%= stylesheet_link_tag 'ui.selectmenu.css' %>
-  <%= stylesheet_link_tag 'jquery.multiselect.css' %>
-  <%= stylesheet_link_tag 'ui.spinner.css' %>
-  
-  <%= javascript_include_tag 'jquery-1.4.2.min' %>
-  <%= javascript_include_tag 'jquery-ui-1.8.6.custom.min' %>
-  <%= javascript_include_tag 'jquery-ui-selectmenu' %>
-  <%= javascript_include_tag 'jquery.multiselect.min' %>
-  <%= javascript_include_tag 'ui.spinner.min' %>
-  <%= javascript_include_tag 'monthpicker.min' %>
-  <%= javascript_include_tag 'rails' %>
-  <%= javascript_include_tag 'application' %>
+  <%= stylesheet_link_tag "style.css", :media=>"screen" %>
+  <%= stylesheet_link_tag "print-reset.css", :media=>"print" %>
+  <%= stylesheet_link_tag "jquery-ui-1.8.9.custom.css" %>
 
-  <!--%= javascript_include_tag :defaults %-->
+  <%= javascript_include_tag :defaults %>
+  <%= javascript_include_tag "jquery-ui.min.js" %>
+  <%= javascript_include_tag "jquery-ui-timepicker-addon.js" %>
+  <%= javascript_include_tag "dateFormat.js" %>
 
   <%= csrf_meta_tag %>
+
 </head>
 <body class="<%= bodytag_class %>">
-
   <div id="header">
     <div class="wrap selfclear">
       <a id="logo" href="/"><strong>Low</strong>down</a>
