--- a/app/views/reports/_report.html.erb
+++ b/app/views/reports/_report.html.erb
@@ -3,36 +3,36 @@
   <thead>
     <tr>
       <th rowspan="2" colspan="<%= @group_fields.size - 1 %>"></th>
-      <th rowspan="2" class="rotate-270"><div><span><%= @group_fields[-1].sub("_id","").sub("_"," ").capitalize %></span></div></th>
-      <% if @fields.member? 'funds' %><th rowspan="2" class="rotate-270"><div><span>Funds</span></div></th><% end %>
-      <% if @fields.member? 'agency_other' %><th rowspan="2" class="rotate-270"><div><span>Agency Other</span></div></th><% end %>
-      <% if @fields.member? 'vehicle_maint' %><th rowspan="2" class="rotate-270"><div><span>Vehicle Maint.</span></div></th><% end %>
-      <% if @fields.member? 'administrative' %><th rowspan="2" class="rotate-270"><div><span>Administrative</span></div></th><% end %>
-      <% if @fields.member? 'operations' %><th rowspan="2" class="rotate-270"><div><span>Operations</span></div></th><% end %>
-      <% if @fields.member? 'donations' %><th rowspan="2" class="rotate-270"><div><span>Donations</span></div></th><% end %>
-      <% if @fields.member? 'fares' %><th rowspan="2" class="rotate-270"><div><span>Fares</span></div></th><% end %>
-      <% if @fields.member? 'total' %><th rowspan="2" class="rotate-270"><div><span>Total</span></div></th><% end %>
-      <% if @fields.member? 'in_district_trips' %><th rowspan="2" class="rotate-270"><div><span>In District Rides</span></div></th><% end %>
-      <% if @fields.member? 'out_of_district_trips' %><th rowspan="2" class="rotate-270"><div><span>Out of District Rides</span></div></th><% end %>
-      <% if @fields.member? 'total_trips' %><th rowspan="2" class="rotate-270"><div><span>Total this Period</span></div></th><% end %>
-      <% if @fields.member? 'total_last_year' %><th rowspan="2" class="rotate-270"><div><span>Total this Period Last Year</span></div></th><% end %>
-      <% if @fields.member? 'mileage' %><th rowspan="2" class="rotate-270"><div><span>Mileage</span></div></th><% end %>
+      <th rowspan="2" class="wrap"><%= @group_fields[-1].sub("_id","").sub("_"," ").capitalize %></th>
+      <% if @fields.member? 'funds' %><th rowspan="2" class="wrap">Funds</th><% end %>
+      <% if @fields.member? 'agency_other' %><th rowspan="2" class="wrap">Agency Other</th><% end %>
+      <% if @fields.member? 'vehicle_maint' %><th rowspan="2" class="wrap">Vehicle Maint.</th><% end %>
+      <% if @fields.member? 'administrative' %><th rowspan="2" class="wrap">Administrative</th><% end %>
+      <% if @fields.member? 'operations' %><th rowspan="2" class="wrap">Operations</th><% end %>
+      <% if @fields.member? 'donations' %><th rowspan="2" class="wrap">Donations</th><% end %>
+      <% if @fields.member? 'fares' %><th rowspan="2" class="wrap">Fares</th><% end %>
+      <% if @fields.member? 'total' %><th rowspan="2" class="wrap">Total</th><% end %>
+      <% if @fields.member? 'in_district_trips' %><th rowspan="2" class="wrap">In District Rides</th><% end %>
+      <% if @fields.member? 'out_of_district_trips' %><th rowspan="2" class="wrap">Out of District Rides</th><% end %>
+      <% if @fields.member? 'total_trips' %><th rowspan="2" class="wrap">Total This Period</th><% end %>
+      <% if @fields.member? 'total_last_year' %><th rowspan="2" class="wrap">Last Year's Total This Period</th><% end %>
+      <% if @fields.member? 'mileage' %><th rowspan="2" class="wrap">Mileage</th><% end %>
       <% if @fields['driver_hours'] > 0 %><th colspan="<%= @fields['driver_hours'] %>">Driver Hours<% end %>
-      <% if @fields.member? 'cost_per_trip' %><th rowspan="2" class="rotate-270"><div><span>Cost/Trip</span></div></th><% end %>
-      <% if @fields.member? 'cost_per_mile' %><th rowspan="2" class="rotate-270"><div><span>Cost/Mile</span></div></th><% end %>
-      <% if @fields.member? 'cost_per_hour' %><th rowspan="2" class="rotate-270"><div><span>Cost/Hour</span></div></th><% end %>
-      <% if @fields.member? 'miles_per_ride' %><th rowspan="2" class="rotate-270"><div><span>Miles/Ride</span></div></th><% end %>
-      <% if @fields.member? 'turn_downs' %><th rowspan="2" class="rotate-270"><div><span>Turn Downs</span></div></th><% end %>
-      <% if @fields.member? 'undup_riders' %><th rowspan="2" class="rotate-270"><div><span>Undup Riders</span></div></th><% end %>
+      <% if @fields.member? 'cost_per_trip' %><th rowspan="2" class="wrap">Cost/Trip</th><% end %>
+      <% if @fields.member? 'cost_per_mile' %><th rowspan="2" class="wrap">Cost/Mile</th><% end %>
+      <% if @fields.member? 'cost_per_hour' %><th rowspan="2" class="wrap">Cost/Hour</th><% end %>
+      <% if @fields.member? 'miles_per_ride' %><th rowspan="2" class="wrap">Miles/Ride</th><% end %>
+      <% if @fields.member? 'turn_downs' %><th rowspan="2" class="wrap">Turn Downs</th><% end %>
+      <% if @fields.member? 'undup_riders' %><th rowspan="2" class="wrap">Undup Riders</th><% end %>
       <% if @fields['volunteer_hours'] > 0 %><th colspan="<%= @fields['volunteer_hours'] %>">Volunteer Hours</th><% end %>
     </tr>
     <tr>
-      <% if @fields.member? 'driver_volunteer_hours' %><th class="rotate-270"><div><span>Volunteer</span></div></th><% end %>
-      <% if @fields.member? 'driver_paid_hours' %><th class="rotate-270"><div><span>Paid</span></div></th><% end %>
-      <% if @fields.member? 'driver_total_hours' %><th class="rotate-270"><div><span>Total</span></div></th><% end %>
-      <% if @fields.member? 'escort_volunteer_hours' %><th class="rotate-270"><div><span>Escort</span></div></th><% end %>
-      <% if @fields.member? 'admin_volunteer_hours' %><th class="rotate-270"><div><span>Admin</span></div></th><% end %>
-      <% if @fields.member? 'total_volunteer_hours' %><th class="rotate-270"><div><span>Total</span></div></th><% end %>
+      <% if @fields.member? 'driver_volunteer_hours' %><th class="wrap">Volunteer</th><% end %>
+      <% if @fields.member? 'driver_paid_hours' %><th class="wrap">Paid</th><% end %>
+      <% if @fields.member? 'driver_total_hours' %><th class="wrap">Total</th><% end %>
+      <% if @fields.member? 'escort_volunteer_hours' %><th class="wrap">Escort</th><% end %>
+      <% if @fields.member? 'admin_volunteer_hours' %><th class="wrap">Admin</th><% end %>
+      <% if @fields.member? 'total_volunteer_hours' %><th class="wrap">Total</th><% end %>
     </tr>
   </thead>
   <tbody>
