restore bulk update (accidentally removed by chrispatterson) and allow for text-based start/end date

--- a/app/views/trips/show_bulk_update.html.erb
+++ b/app/views/trips/show_bulk_update.html.erb
@@ -8,8 +8,8 @@
     <ol class="section">
       <li>
       Mark all runs complete for periods between
-      <%= date_select :update, :start_date %> and 
-      <%= date_select :update, :end_date %>
+      <%= text_field_tag :start_date %> and
+      <%= text_field_tag :end_date %>
       </li>
     </ol>
 
