--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>Lowdown</title>
   <%= stylesheet_link_tag "style.css", :media=>"screen" %>
-  <%= stylesheet_link_tag "print-reset.css", :media=>"print" %>
+  <%= stylesheet_link_tag "print.css", :media=>"print" %>
   <%= stylesheet_link_tag "jquery-ui-1.8.9.custom.css" %>
 
   <%= javascript_include_tag :defaults %>
