fix report render issues

--- a/app/views/reports/report.html.erb
+++ b/app/views/reports/report.html.erb
@@ -1,5 +1,5 @@
 <div id="page-header">
-  <h1>Network Service Summary</h1>
+  <h1><% if @report.name %><%= @report.name %><% else %>Network Service Summary<% end %></h1>
 </div>
 
 <p>
