fix misleading text

--- a/app/views/new_user_mailer/new_user_email.html.erb
+++ b/app/views/new_user_mailer/new_user_email.html.erb
@@ -3,7 +3,7 @@ Hi, <%= @user.email %><br/>
 You have been added as a user to LowDown.  You can visit the site at<br/>
 <%= @url %><br/>
 <br/>
-You have been assigned the temporary password <%= @password %><br/>
+You have been assigned the password <%= @password %><br/>
 <br/>
-You will be asked to change it when you log in.<br/>
+
 
