--- a/app/views/reports/_report.html.erb
+++ b/app/views/reports/_report.html.erb
@@ -2,31 +2,28 @@
 <table>
   <thead>
     <tr>
-      <th rowspan="2" colspan="<%= @group_fields.size - 1 %>"></th>
-      <th rowspan="2" class="wrap"><%= @group_fields[-1].sub("_id","").sub("_"," ").capitalize %></th>
-      <% if @fields.member? 'funds' %><th rowspan="2" class="wrap">Funds</th><% end %>
-      <% if @fields.member? 'agency_other' %><th rowspan="2" class="wrap">Agency Other</th><% end %>
-      <% if @fields.member? 'vehicle_maint' %><th rowspan="2" class="wrap">Vehicle Maint.</th><% end %>
-      <% if @fields.member? 'administrative' %><th rowspan="2" class="wrap">Administrative</th><% end %>
-      <% if @fields.member? 'operations' %><th rowspan="2" class="wrap">Operations</th><% end %>
-      <% if @fields.member? 'donations' %><th rowspan="2" class="wrap">Donations</th><% end %>
-      <% if @fields.member? 'fares' %><th rowspan="2" class="wrap">Fares</th><% end %>
-      <% if @fields.member? 'total' %><th rowspan="2" class="wrap">Total</th><% end %>
-      <% if @fields.member? 'in_district_trips' %><th rowspan="2" class="wrap">In District Rides</th><% end %>
-      <% if @fields.member? 'out_of_district_trips' %><th rowspan="2" class="wrap">Out of District Rides</th><% end %>
-      <% if @fields.member? 'total_trips' %><th rowspan="2" class="wrap">Total This Period</th><% end %>
-      <% if @fields.member? 'total_last_year' %><th rowspan="2" class="wrap">Last Year's Total This Period</th><% end %>
-      <% if @fields.member? 'mileage' %><th rowspan="2" class="wrap">Mileage</th><% end %>
+      <th colspan="<%= @group_fields.size - 1 %>"></th>
+      <th class="wrap"><%= @group_fields[-1].sub("_id","").sub("_"," ").capitalize %></th>
+      <% if @fields.member? 'funds' %><th class="wrap">Funds</th><% end %>
+      <% if @fields.member? 'agency_other' %><th class="wrap">Agency Other</th><% end %>
+      <% if @fields.member? 'vehicle_maint' %><th class="wrap">Vehicle Maint.</th><% end %>
+      <% if @fields.member? 'administrative' %><th class="wrap">Administrative</th><% end %>
+      <% if @fields.member? 'operations' %><th class="wrap">Operations</th><% end %>
+      <% if @fields.member? 'donations' %><th class="wrap">Donations</th><% end %>
+      <% if @fields.member? 'fares' %><th class="wrap">Fares</th><% end %>
+      <% if @fields.member? 'total' %><th class="wrap">Total</th><% end %>
+      <% if @fields.member? 'in_district_trips' %><th class="wrap">In District Rides</th><% end %>
+      <% if @fields.member? 'out_of_district_trips' %><th class="wrap">Out of District Rides</th><% end %>
+      <% if @fields.member? 'total_trips' %><th class="wrap">Total This Period</th><% end %>
+      <% if @fields.member? 'total_last_year' %><th class="wrap">Last Year's Total This Period</th><% end %>
+      <% if @fields.member? 'mileage' %><th class="wrap">Mileage</th><% end %>
       <% if @fields['driver_hours'] > 0 %><th colspan="<%= @fields['driver_hours'] %>">Driver Hours<% end %>
-      <% if @fields.member? 'cost_per_trip' %><th rowspan="2" class="wrap">Cost/Trip</th><% end %>
-      <% if @fields.member? 'cost_per_mile' %><th rowspan="2" class="wrap">Cost/Mile</th><% end %>
-      <% if @fields.member? 'cost_per_hour' %><th rowspan="2" class="wrap">Cost/Hour</th><% end %>
-      <% if @fields.member? 'miles_per_ride' %><th rowspan="2" class="wrap">Miles/Ride</th><% end %>
-      <% if @fields.member? 'turn_downs' %><th rowspan="2" class="wrap">Turn Downs</th><% end %>
-      <% if @fields.member? 'undup_riders' %><th rowspan="2" class="wrap">Undup Riders</th><% end %>
-      <% if @fields['volunteer_hours'] > 0 %><th colspan="<%= @fields['volunteer_hours'] %>">Volunteer Hours</th><% end %>
-    </tr>
-    <tr class="sub-header">
+      <% if @fields.member? 'cost_per_trip' %><th class="wrap">Cost/Trip</th><% end %>
+      <% if @fields.member? 'cost_per_mile' %><th class="wrap">Cost/Mile</th><% end %>
+      <% if @fields.member? 'cost_per_hour' %><th class="wrap">Cost/Hour</th><% end %>
+      <% if @fields.member? 'miles_per_ride' %><th class="wrap">Miles/Ride</th><% end %>
+      <% if @fields.member? 'turn_downs' %><th class="wrap">Turn Downs</th><% end %>
+      <% if @fields.member? 'undup_riders' %><th class="wrap">Undup Riders</th><% end %>
       <% if @fields.member? 'driver_volunteer_hours' %><th class="wrap">Volunteer</th><% end %>
       <% if @fields.member? 'driver_paid_hours' %><th class="wrap">Paid</th><% end %>
       <% if @fields.member? 'driver_total_hours' %><th class="wrap">Total</th><% end %>
