--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -700,9 +700,6 @@ table tr.sum-totals td:last-child {
 input.datepicker {
     width: 6em;
 }
-.ui-datepicker-trigger:hover {
-    cursor: pointer;
-}
 #ui-datepicker-div table {
     border-bottom: 0;
     border-top: 0;
@@ -726,9 +723,17 @@ input.datepicker {
 .ui_tpicker_minute { font-size: 9px; }
   
 .ui-datepicker-trigger {
-    padding-left: 5px;
-    margin-right: 5px;
+    margin: 0 5px;
     vertical-align: middle;
+    background: url(images/calendar.png) 0 0 no-repeat scroll;
+    border: 0;
+    width: 16px;
+    height: 16px; 
+    text-indent: -9999px;
+    display: inline-block;
+}
+.ui-datepicker-trigger:hover {
+    cursor: pointer;
 }
 
 /*
