--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -47,12 +47,15 @@
     <input type="hidden" name="report[adjustment]" value="0" />
     <input type="hidden" name="report[pending]" value="0" />
 
-    <p>
-      <label for="report[start_date]">Start date:</label> <input type="text" name="report[start_date]" value="<%= @start_date %>" class="datepicker" />
-      <label for="report[end_date]">End date:</label> <input type="text" name="report[end_date]" value="<%= @end_date %>" class="datepicker" />
-      <input type="checkbox" name="report[adjustment]" value="1" /> <label for="report[adjustment]">Adjustments?</label>
-      <input type="checkbox" name="report[pending]" value="1" /> <label for="report[pending]">Pending?</label>
-    </p>
+    <ol class="section first">
+      <li><label>Start Date:</label> <%= date_select( :report, "start_date", :end_year => Time.now.year, :order => [:month, :year] ) %></li>
+      <li><label>End Date:</label> <%= date_select( :report, "end_date", :end_year => Time.now.year, :order => [:month, :year] ) %></li>
+    </ol>
+
+    <ol class="section second">
+      <li><label for="report[adjustment]">Adjustments:</label><input type="checkbox" name="report[adjustment]" value="1" /></li>
+      <li><label for="report[pending]">Pending:</label><input type="checkbox" name="report[pending]" value="1" /></li>
+    </ol>
 
     <div class="actions">
       <input type="submit" name="commit" value="View Report"/>
